fix: wrapping up with tiny fixes in the ui

--- a/style.css
+++ b/style.css
@@ -110,6 +110,10 @@ body {
     gap: 58px;
 }
 
+.navitem:is(:hover, :focus-visible) {
+    color: #000;
+}
+
 .navitem {
     font-size: 16px;
     cursor: pointer;
@@ -228,6 +232,12 @@ body {
     box-shadow: 0px 4px 30px 1px rgba(0, 0, 0, 0.3);
 }
 
+.sale-text .btn:is(:hover, :focus-visible) {
+    /* background-color: #fff;
+    color: #000; */
+    box-shadow: 0px 4px 50px 1px rgba(0, 0, 0, 0.4);
+}
+
 
 .sale-image-bottom {
     grid-area: b;
@@ -331,6 +341,10 @@ body {
     border-radius: 10px;
     color: #fff;
     box-shadow: 0px 4px 30px 1px rgba(0, 0, 0, 0.3);
+}
+
+.deals-container .btn:is(:hover, :focus-visible) {
+    box-shadow: 0px 4px 50px 1px rgba(0, 0, 0, 0.4);
 }
 
 .deals-container .timer {
@@ -540,6 +554,15 @@ body {
     background-color: #fafafa;
 }
 
+.catagories .btn:is(:focus-visible, :hover) {
+    width: 207px;
+    height: 56px;
+    font-size: 16px;
+    border-radius: 10px;
+    color: #8a8a8a;
+    background-color: #f1f1f1;
+}
+
 .catagories .btn.active {
     color: #fff;
     background-color: black;
@@ -672,6 +695,10 @@ body {
     color: #fff;
     background-color: black;
     border-radius: 10px;
+}
+
+.new-arrivals-section .view-btn:is(:hover, :focus-visible) {
+    box-shadow: 0px 4px 30px 1px rgba(0, 0, 0, 0.4);
 }
 
 .peaky-blinder-section {
@@ -876,6 +903,10 @@ body {
     
 }
 
+
+.peaky-info .button:is(:hover, :focus-visible) {
+    box-shadow: 0px 4px 50px 1px rgba(0, 0, 0, 0.4);
+}
 
 .instagram-section {
     width: 100%;
@@ -1231,6 +1262,9 @@ body {
     justify-self: center;
 }
 
+.ending-section .news-letter .btn:is(:hover, :focus-visible) {
+    box-shadow: 0px 4px 50px 1px rgba(0, 0, 0, 0.4);
+}
 .ending-sepa {
     width: 1920px;
     height: 1px;
@@ -1259,10 +1293,17 @@ aside {
     gap: 38px;
 }
 
+
+.link-item:is(:hover, :focus-visible) {
+    color: #000;
+
+}
+
 .link-item {
     font-size: 16px;
     /* height: 24px; */
     color: #8a8a8a;
+    cursor: pointer;
 }
 
 
@@ -1882,6 +1923,10 @@ footer p {
     cursor: pointer;
 }
 
+.shop-section .navlist .navlinks li:is(:hover, :focus-visible) {
+    color: #000;
+}
+
 .shop-section .navlist .navlinks li {
     padding: 3px;
 }
@@ -2115,6 +2160,10 @@ footer p {
     cursor: pointer;
 }
 
+.shop-section .filter-section .prices-section .price-value.active {
+    color: #000;
+}
+
 .shop-section .brands-section {
     margin-top: 33px;
 }
@@ -2211,6 +2260,10 @@ footer p {
     color: #8a8a8a;
     padding-top: 7px;
     cursor: pointer;
+}
+
+.shop-section .collection-section .collection-item.active {
+    color: #000;
 }
 
 .shop-section .tag-section {
@@ -2542,6 +2595,10 @@ footer p {
 }
 
 
+.shop-section .quantity-section .add-cart-btn:is(:hover, :focus-visible) {
+    background-color: #000;
+    color: #f8f8f8;
+}
 .shop-section .quantity-section .add-cart-btn {
     width: 442px;
     height: 45px;
@@ -2551,6 +2608,8 @@ footer p {
     padding: auto;
     border-radius: 5px;
     border: 1px solid #000;
+    transition: background-color 0.3s ease;
+    transition: color 0.3s ease;
 }
 
 .shop-section .single-product .good-links {
@@ -2807,6 +2866,10 @@ footer p {
     width: 613px;
 }
 
+.mini-cart-section .checkout-btn:is(:hover, :focus-visible) {
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
+}
+
 .mini-cart-section .checkout-btn {
     width: 613px;
     height: 66px;
@@ -2815,6 +2878,10 @@ footer p {
     background-color: #000;
     color: #fff;
     margin-top: 54px;
+}
+
+.mini-cart-section .view-btn:is(:hover, :focus-visible) {
+    color: rgba(0, 0, 0, 0.7);
 }
 
 .mini-cart-section .view-btn {
